--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3> Com grande respeito e reconhecimento pelo trabalho da oficial Julia Argent | 305 que venho, por meio deste,
             estender um convite para que ela integre a nossa equipe como trainee na unidade de inteligencia da
             Detective Bureau do Estado de San Andreas.</h3>
-        <a href="e:\vscode\convite db\fogo.mp4"><button id="sim" > Sim! </button></a>
+        <a href="https://www.youtube.com/watch?v=Hv3st70Rmpk&pp=ygUPZm9nb3MgZXN0b3VyYWRv"><button id="sim" > Sim! </button></a>
         <button onmouseover="fuja()" id="nao"> Não! </button>
     </div>
     <script src="script.js"></script>
